updated query
